syntax = "proto3";

import "checks.proto";

package opsee;

option java_package = "co.opsee.proto";
option java_multiple_files = true;
option java_outer_classname = "BastionProto";

option go_package = "schema";

service Checker {
	rpc TestCheck(TestCheckRequest) returns (TestCheckResponse) {}
	rpc CreateCheck(CheckResourceRequest) returns (ResourceResponse) {}
	rpc RetrieveCheck(CheckResourceRequest) returns (ResourceResponse) {}
	rpc UpdateCheck(CheckResourceRequest) returns (ResourceResponse) {}
	rpc DeleteCheck(CheckResourceRequest) returns (ResourceResponse) {}
}
